cluster/apps/dev/gitea/gitea.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 22
      targetPort: 22
      name: ssh
  selector:
    app: gitea
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - ${SVC_GITEA_ADDRESS}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: dev
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  serviceName: "gitea"
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.15.10
          # env:
          #   - name: APP_NAME
          #     value: "Gitea"
          #   - name: RUN_MODE
          #     value: prod
          #   - name: ROOT_URL
          #     value: https://git.${SECRET_DOMAIN}
          #   - name: DISABLE_REGISTRATION
          #     value: "false"
          #   - name: DEFAULT_PRIVATE
          #     value: private
          #   - name: ENABLE_PUSH_CREATE_USER
          #     value: "true"
          #   - name: ENABLE_PUSH_CREATE_ORG
          #     value: "true"
          #   - name: ISSUE_PAGING_NUM
          #     value: "20"
          #   - name: DEFAULT_THEME
          #     value: arc-green
          #   - name: SECRET_KEY
          #     value: "${SECRET_KEY_GITEA}"
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 10
          resources:
            limits:
              cpu: 2000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 215Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-pvc-v2
