cluster/apps/dev/gitea/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
spec:
  rules:
    - host: "git.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: gitea
              servicePort: http
            path: /
  tls:
    - hosts:
        - "git.${SECRET_DOMAIN}"
